# 42177

./: .gitignore  .gitmodules  README.md  pyproject.toml
models/cobb_predictor_optimized/: classification_metrics.csv  feature_importance.csv  train_confusion_matrix.csv  training_metrics.csv  val_confusion_matrix.csv
models/optuna_results/: best_hyperparameters.json  optimization_trials.csv
scripts/: __init__.py
scripts/pre/: __init__.py  index_gen.py
scripts/predict/: __init__.py  feature_extractor.py  model.py  optimize.py  predict.py
scripts/training/: train.py
