[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ultralytics>=8.3.213",
    "xgboost>=2.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.66.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0"
]

[project.scripts]
index_gen = "scripts.pre.index_gen:main"
train = "scripts.train.train:main"
predict = "scripts.predict.predict:main"

[tool.setuptools]
packages = ["scripts"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
required-environments = [
    "sys_platform == 'win32'"
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
